# AQF

./: README.md  data_analysis.ipynb  pyproject.toml
src/aqf/: __init__.py  data_access.py  tickers.py
