[project]
name = "aqf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.39",
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "s3fs>=0.4.2",
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "pytz>=2023.3",
]

[project.scripts]
aqf = "aqf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqf"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "kaleido>=0.2.1",
]
